test/type/fail/expr_field.j
class A { Void main(){return;} }
class B {
  Int a;
}

class C {
  String a;
  B b;
  Void a() {
    this.a = new B();
    return;
  }
}
